# homepage

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  biome.json  justfile  links.json.example  links.test.json  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  dependency_review.yml  mypy.yml  pylint.yml  pytest.yml
homepage/: __init__.py  __main__.py  cli.py  config.py
homepage/static/: bulma.css  manifest.webmanifest
homepage/static/js/: service_worker.js
homepage/templates/: index.html
tests/: test_cli.py  test_homepage.py
