
[project]
name = "homepage"
version = "0.0.5"
description = "Home Page"
license = { text = "MIT" }
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.135.1",
    "Jinja2>=3.1.6",
    "loguru>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.13.1",
    "questionary>=2.1.0",
    "click>=8.1.8",
    "validators>=0.34.0",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pylint-pydantic>=0.3.5",
    "httpx>=0.28.1",
    "ruff>=0.11.3",
    "types-click>=7.1.8",
    "types-requests>=2.32.0.20250328",
    "pytest-cov>=6.1.1",
    "ty>=0.0.21",
    "coveralls>=4.1.0",
    "coverage>=7.13.4",
]


[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
homepage = "homepage.__main__:cli"
