[project]
name = "homepage"
version = "0.0.5"
description = "Home Page"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.135.1",
    "Jinja2>=3.1.6",
    "loguru>=0.7.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.14.0",
    "questionary>=2.1.1",
    "click>=8.1.8",
    "validators>=0.34.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.34.0",
]
readme = "README.md"

[project.license]
text = "MIT"

[project.scripts]
homepage = "homepage.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pylint-pydantic>=0.4.1",
    "httpx>=0.28.1",
    "ruff>=0.15.1",
    "types-click>=7.1.8",
    "types-requests>=2.32.0.20250328",
    "pytest-cov>=7.1.0",
    "ty>=0.0.31",
    "coveralls>=4.1.0",
    "coverage>=7.13.5",
]

[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
